Prevent animal image from becoming too large

--- a/player/players/animals.css
+++ b/player/players/animals.css
@@ -25,6 +25,8 @@
 .animal-image {
   width: 100%;
   height: auto;
+  max-height: 50%;
+  object-fit: cover;
 }
 
 .animal-info-name {
